Add alert to asssignment list per Wilma